--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
       "parser": "babel-eslint"
     }
   },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
